add models and initializing services for api

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,9 @@
       <app-about-me></app-about-me>
     </div>
     <div class="section">
-      <div class="slide">Slide 2.1</div>
+      <div class="slide">
+        <fa-icon [icon]="faCoffee" >holii</fa-icon>
+      </div>
       <div class="slide">Slide 2.2</div>
       <div class="slide">Slide 2.3</div>
     </div>
