--- a/src/app/components/about-me/about-me.component.html
+++ b/src/app/components/about-me/about-me.component.html
@@ -1,6 +1,96 @@
 <section class="contenedor">
   <div class="aboutMe">
     <p class="display-1 title">about me</p>
+    <div class="paragraph">
+      <b
+        style="
+          font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+            'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        "
+        >hey :D, i'm Cristian Garzon - BackEnd developer</b
+      >
+      <br />
+      <p>
+        2 years of experience in creating projects with java, six months
+        creating REST API with spring boot framework, intermediate level in
+        spring boot, intermediate level in microservice architecture with spring
+        cloud in netflix eureka. In my spare time I do competitive programming
+        from codeforces in c ++. Good in teamwork, good communication with
+        teammates is necessary to be able to move forward with the project in
+        question. In constant learning, I like to continue advancing my
+        knowledge by doing various online courses such as udemy courses. One
+        year of experience in different linux distributions.
+      </p>
+    </div>
   </div>
-  <div class="skills">skills</div>
+  <div class="skills">
+    <p class="display-1 title">skills</p>
+    <div class="tecnologies paragraph">
+      <div class="content-skills">
+        <div
+          id="carouselExampleIndicators"
+          class="carousel slide"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-indicators buttons">
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="0"
+              class="active"
+              aria-current="true"
+              aria-label="Slide 1"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="1"
+              aria-label="Slide 2"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="2"
+              aria-label="Slide 3"
+            ></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="images">
+                <img
+                  src="../../../assets/images/skills/java.png" class="image" 
+                />
+              </div>
+            </div>
+            <div class="carousel-item">2</div>
+            <div class="carousel-item">3</div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="prev"
+          >
+            <span
+              class="carousel-control-prev-icon arrows"
+              aria-hidden="true"
+            ></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="next"
+          >
+            <span
+              class="carousel-control-next-icon arrows"
+              aria-hidden="true"
+            ></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
