--- a/src/app/components/about-me/about-me.component.css
+++ b/src/app/components/about-me/about-me.component.css
@@ -1,25 +1,64 @@
-@import '~fullpage.js/dist/fullpage.min.css';
-.aboutMe{
-    width: 50%;
-    height: 100%;
-    position: absolute;
+@import "~fullpage.js/dist/fullpage.min.css";
+.aboutMe {
+  color: black;
+  width: 50%;
+  height: 100%;
+  position: absolute;
 }
-.skills{
-    position: absolute;
-    left: 50%;
-    width: 50%;
-    height: 100%;
+.skills {
+  position: absolute;
+  left: 50%;
+  width: 50%;
+  height: 100%;
 }
-.contenedor{
-    width: 100%;       
-    height: 100%;
-    position: absolute;
-    top: 20%;
-    left: 50%;           
-    margin-top: -10%;
-    margin-left: -50%;
+.contenedor {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  margin-top: -10%;
+  margin-left: -49%;
 }
-.title{
-    color: white;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+.title {
+  font-family: cursive;
+  font-size: 4vw;
+  position: absolute;
+  top: 20%;
+}
+.paragraph {
+  width: 90%;
+  line-height: 100%;
+  height: 50%;
+  position: absolute;
+  font-size: 2vw;
+  top: 35%;
+  font-family: serif;
+}
+.tecnologies {
+  background-color: gray;
+  opacity: 0.7;
+}
+.content-skills {
+  position: absolute;
+}
+.buttons {
+  position: absolute;
+  height: 3%;
+  top: 45%;
+}
+.arrows {
+  position: absolute;
+  top: 25%;
+}
+.images {
+  text-align: center;
+  margin-bottom: -10%;
+}
+.image{
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+  background-attachment: fixed;
 }
