--- a/src/app/components/who-am-i/who-am-i.component.css
+++ b/src/app/components/who-am-i/who-am-i.component.css
@@ -1,25 +1,23 @@
-.who{
-    text-align: center;
-    align-items: center;
-    position: absolute;
-    top: 30%;
-    left: 50%; 
-    transform: translate(-50%, -50%);
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 8vw;
-    color: white;
+.who {
+  text-align: center;
+  align-items: center;
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: 8vw;
 }
-.contenedor{
-    width: 100%;       
-    height: 100%;
-    position: absolute;
+.contenedor {
+  width: 100%;
+  height: 100%;
+  position: absolute;
 }
-.who2{
-    color: white;
-    position: absolute;
-    top: 60%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-family: serif;
-    font-size: 3vw;
+.who2 {
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-family: serif;
+  font-size: 3vw;
 }
