--- a/src/app/components/about-me/about-me.component.css
+++ b/src/app/components/about-me/about-me.component.css
@@ -53,7 +53,11 @@
 }
 .images {
   text-align: center;
-  margin-bottom: -10%;
+  display: block;
+  margin: auto;
+  width: 50%;
+  height: 50%;
+  opacity: 1;
 }
 .image{
   background-size: cover;
