anexing projects component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,11 +7,7 @@
       <app-about-me></app-about-me>
     </div>
     <div class="section">
-      <div class="slide">
-        <fa-icon [icon]="faCoffee" >holii</fa-icon>
-      </div>
-      <div class="slide">Slide 2.2</div>
-      <div class="slide">Slide 2.3</div>
+      <app-projects></app-projects>
     </div>
     <div class="section" (click)="fullpage_api.moveTo('secondPage', 2)">
       Some section4
