add cards for projects, and atributes start and end, in the model project

--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,1 +1,21 @@
-<p>projects works!</p>
+<div class="content">
+  <div *ngFor="let item of projects">
+    <mat-card class="example-card">
+      <mat-card-header>
+        <mat-card-title>{{item.workStation}}</mat-card-title>
+        <mat-card-subtitle>{{item.start | date: "yyyy-MM-dd"}} - {{item.end | date:"yyy-MM-dd"}}</mat-card-subtitle>
+      </mat-card-header>
+      <img
+        mat-card-image
+        src="https://material.angular.io/assets/img/examples/shiba2.jpg"
+        alt="Photo of a Shiba Inu"
+      />
+      <mat-card-content>
+        <p>{{item.description}}</p>
+      </mat-card-content>
+      <mat-card-actions>
+          <button (click)="repository(item)" class="btn btn-success">repository</button>
+      </mat-card-actions>
+    </mat-card>
+  </div>
+</div>
