--- a/src/app/components/projects/projects.component.css
+++ b/src/app/components/projects/projects.component.css
@@ -1,4 +1,72 @@
 .content {
   width: 30%;
   position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: yellow;
+}
+.cards {
+  margin-top: 10%;
+  max-width: 30%;
+  padding: 10px;
+  float: left;
+}
+.paragraph {
+  width: 90%;
+  line-height: 100%;
+  height: 50%;
+  font-size: 2vw;
+  top: 35%;
+  font-family: serif;
+}
+.image{
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+  background-attachment: fixed;
+}
+.images {
+  text-align: center;
+  display: block;
+  margin: auto;
+  width: 100%;
+  height: 100%;
+  opacity: 1;
+}
+.description {
+  overflow: auto;
+  height: 100px; 
+}
+/* width */
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 50px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: gray; 
+  border-radius: 50px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(56, 55, 55); 
+}
+
+.control-img{
+  position: relative;
+  text-align: center;
+  left: 5%;
+  width: 100%;
+  height: 200px;
+  min-width: 120px;
+  min-height:120px;
 }
