--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,21 +1,84 @@
-<div class="content">
-  <div *ngFor="let item of projects">
-    <mat-card class="example-card">
-      <mat-card-header>
-        <mat-card-title>{{item.workStation}}</mat-card-title>
-        <mat-card-subtitle>{{item.start | date: "yyyy-MM-dd"}} - {{item.end | date:"yyy-MM-dd"}}</mat-card-subtitle>
-      </mat-card-header>
-      <img
-        mat-card-image
-        src="https://material.angular.io/assets/img/examples/shiba2.jpg"
-        alt="Photo of a Shiba Inu"
-      />
-      <mat-card-content>
-        <p>{{item.description}}</p>
-      </mat-card-content>
-      <mat-card-actions>
-          <button (click)="repository(item)" class="btn btn-success">repository</button>
-      </mat-card-actions>
-    </mat-card>
+<div class="gallery">
+  <div class="container-lg">
+    <div class="row">
+      <div class="col cards" *ngFor="let item of projects">
+        <mat-card class="example-card gallery-item">
+          <mat-card-header>
+            <mat-card-title>{{ item.workStation }}</mat-card-title>
+            <mat-card-subtitle
+              >{{ item.start | date: "yyyy-MM-dd" }} -
+              {{ item.end | date: "yyy-MM-dd" }}</mat-card-subtitle
+            >
+          </mat-card-header>
+          <div class="control-img">
+            <div class="tecnologies paragraph">
+              <div class="content-skills">
+                <div
+                  id="carouselExampleIndicators"
+                  class="carousel slide"
+                  data-bs-ride="carousel"
+                >
+                  <div
+                    class="carousel-inner"
+                    *ngFor="let images of item.images; let i = index"
+                  >
+                    <div
+                      class="carousel-item active"
+                    >
+                      <img
+                        *ngIf="images.pictureHashCode && i == 0"
+                        [src]="url + item.id + '/' + images.id"
+                        class="img-thubnail rounded images image"
+                      />
+                    </div>
+                    <div
+                      class="carousel-item my-3"
+                    >
+                      <img
+                        *ngIf="images.pictureHashCode && i != 0"
+                        [src]="url + item.id + '/' + images.id"
+                        class="img-thubnail rounded images image"
+                      />
+                    </div>
+                  </div>
+                  <button
+                    class="carousel-control-prev"
+                    type="button"
+                    data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="prev"
+                  >
+                    <span
+                      class="carousel-control-prev-icon arrows"
+                      aria-hidden="true"
+                    ></span>
+                    <span class="visually-hidden">Previous</span>
+                  </button>
+                  <button
+                    class="carousel-control-next"
+                    type="button"
+                    data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="next"
+                  >
+                    <span
+                      class="carousel-control-next-icon arrows"
+                      aria-hidden="true"
+                    ></span>
+                    <span class="visually-hidden">Next</span>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <mat-card-content>
+            <p class="description">{{ item.description }}</p>
+          </mat-card-content>
+          <mat-card-actions>
+            <button (click)="repository(item)" class="btn btn-success">
+              repository
+            </button>
+          </mat-card-actions>
+        </mat-card>
+      </div>
+    </div>
   </div>
 </div>
