adding component curriculum

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,8 +9,7 @@
     <div class="section">
       <app-projects></app-projects>
     </div>
-    <div class="section" (click)="fullpage_api.moveTo('secondPage', 2)">
-      Some section4
+    <div class="section">
     </div>
   </div>
 </div>
