--- a/src/app/components/about-me/about-me.component.html
+++ b/src/app/components/about-me/about-me.component.html
@@ -21,6 +21,7 @@
         knowledge by doing various online courses such as udemy courses. One
         year of experience in different linux distributions.
       </p>
+      <button class="btn btn-success text-dark" (click)="curriculum()" >curriculum</button>
     </div>
   </div>
   <div class="skills">
