--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,2 @@
-<div class="wallpaper">
-  <div fullpage id="fullpage" [options]="config" (ref)="getRef($event)">
-    <div class="section" >
-      <app-who-am-i></app-who-am-i>
-    </div>
-    <div class="section">
-      <app-about-me></app-about-me>
-    </div>
-    <div class="section">
-      <app-projects></app-projects>
-    </div>
-    <div class="section">
-    </div>
-  </div>
-</div>
+<app-navbar></app-navbar>
 <router-outlet></router-outlet>
