adding contact me and the footer

--- a/src/app/components/curriculum/curriculum.component.html
+++ b/src/app/components/curriculum/curriculum.component.html
@@ -1,4 +1,5 @@
-<pdf-viewer
- [src]="pdf"
- [render-text]=true
- style="display: block;"></pdf-viewer>
+  <pdf-viewer
+    [src]="pdf"
+    [render-text]="true"
+    style="display: block"
+  ></pdf-viewer>
