--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,1 +1,9 @@
-<h1 style="background-color: darkblue;">footeeeeer</h1>
+<div class="footer ">
+    <ul>
+        <li><a href="#" class="fab fa-facebook"></a></li>
+        <li><i class="fab fa-angular"></i></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+</div>
