--- a/src/app/components/full-page/full-page.component.html
+++ b/src/app/components/full-page/full-page.component.html
@@ -10,6 +10,7 @@
       <app-projects></app-projects>
     </div>
     <div class="section">
+      <app-contact-me></app-contact-me>
     </div>
   </div>
 </div>
