adding footer and social media

--- a/src/app/components/contact-me/contact-me.component.html
+++ b/src/app/components/contact-me/contact-me.component.html
@@ -29,6 +29,7 @@
         rows="3"
       ></textarea>
     </div>
+    <button class="btn btn-primary" style="width: 100%;">send</button>
   </div>
 </div>
 <app-footer></app-footer>
