--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,9 +1,11 @@
-<div class="footer ">
+<div class="footer social bg-dark">
+  <div class="socialContainer">
     <ul>
-        <li><a href="#" class="fab fa-facebook"></a></li>
-        <li><i class="fab fa-angular"></i></li>
-        <li></li>
-        <li></li>
-        <li></li>
+      <li><a (click)="social($event)" id="https://www.facebook.com/profile.php?id=100009741079215" class="fa fa-facebook facebook"></a></li>
+      <li><a (click)="social($event)" class="fa fa-instagram instagram" id="https://www.instagram.com/cristiangarzon250/"></a></li>
+      <li><a (click)="social($event)" class="fa fa-twitter twitter" id="https://twitter.com/elbronzamayoz"></a></li>
+      <li><a (click)="social($event)" class="fa fa-github github" id="https://github.com/cristian-garzon"></a></li>
+      <li><a (click)="social($event)" class="fa fa-linkedin-square linkedin" id="https://www.linkedin.com/in/cristian-garzon-56abbb217/"></a></li>
     </ul>
+  </div>
 </div>
