--- a/src/app/layout/footer/footer.component.css
+++ b/src/app/layout/footer/footer.component.css
@@ -4,3 +4,56 @@
     width: 100%;
     height: 15%;
 }
+.social{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+.socialContainer{
+    display: flex;
+    height: 15vh;
+    align-items: center;
+    justify-content: center;
+}
+.socialContainer ul li{
+    display: inline-block;
+    margin: 0 5px;
+    width: 150px;
+    height: 50px;
+    text-align: center;
+}
+.socialContainer ul li a{
+    display: block;
+    padding: 0 10px;
+    background-color: gray;
+    color: white;
+    line-height: 50px;
+    font-size: 20px;
+    box-shadow: 0 3px 5px 0px rgba(0, 0, 0, .2);
+    transition: .2s;
+}
+.socialContainer ul:hover a{
+    filter: blur(2px);
+}
+
+.socialContainer ul li a:hover{
+    transform: translateY(-3px) scale(1.05);
+    box-shadow: 0 5px 5px 0px rgba(0, 0, 0, .4);
+    filter: none;
+}
+
+.socialContainer ul li .facebook:hover{
+    background: rgb(59, 89, 152);
+}
+.socialContainer ul li .instagram:hover{
+    background: rgb(193, 53, 132);
+}
+.socialContainer ul li .twitter:hover{
+    background: rgb(0, 172, 238);
+}
+.socialContainer ul li .github:hover{
+    background: rgb(31, 31, 31);
+}
+.socialContainer ul li .linkedin:hover{
+    background: rgb(14, 118, 168);
+}
