responsive welcome component

--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,11 +1,39 @@
-<div class="footer social bg-dark">
-  <div class="socialContainer">
-    <ul>
-      <li><a (click)="social($event)" id="https://www.facebook.com/profile.php?id=100009741079215" class="fa fa-facebook facebook"></a></li>
-      <li><a (click)="social($event)" class="fa fa-instagram instagram" id="https://www.instagram.com/cristiangarzon250/"></a></li>
-      <li><a (click)="social($event)" class="fa fa-twitter twitter" id="https://twitter.com/elbronzamayoz"></a></li>
-      <li><a (click)="social($event)" class="fa fa-github github" id="https://github.com/cristian-garzon"></a></li>
-      <li><a (click)="social($event)" class="fa fa-linkedin-square linkedin" id="https://www.linkedin.com/in/cristian-garzon-56abbb217/"></a></li>
-    </ul>
+<footer>
+  <div class="social bg-dark">
+    <div class="socialContainer">
+      <ul class="responsive">
+        <li>
+          <a
+            (click)="social($event)"
+            id="https://www.facebook.com/profile.php?id=100009741079215"
+            class="fa fa-facebook facebook"
+          ></a>
+        </li>
+        <li>
+          <a
+            (click)="social($event)"
+            class="fa fa-instagram instagram"
+            id="https://www.instagram.com/cristiangarzon250/"
+          ></a>
+        </li>
+        <li>
+          <a
+            (click)="social($event)"
+            class="fa fa-github github"
+            id="https://github.com/cristian-garzon"
+          ></a>
+        </li>
+        <li>
+          <a
+            (click)="social($event)"
+            class="fa fa-linkedin-square linkedin"
+            id="https://www.linkedin.com/in/cristian-garzon-56abbb217/"
+          ></a>
+        </li>
+      </ul>
+    </div>
+    <div class="register">
+      <small>&copy; 2021 <b>Cristian Garzon</b> - derechos registrados </small>
+    </div>
   </div>
-</div>
+</footer>
