--- a/src/app/components/who-am-i/who-am-i.component.css
+++ b/src/app/components/who-am-i/who-am-i.component.css
@@ -4,7 +4,7 @@
   position: absolute;
   top: 30%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%,-30%);
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   font-size: 8vw;
 }
@@ -17,7 +17,8 @@
   position: absolute;
   top: 60%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -20%);
   font-family: serif;
   font-size: 3vw;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
