--- a/src/app/layout/footer/footer.component.css
+++ b/src/app/layout/footer/footer.component.css
@@ -1,59 +1,65 @@
-.footer{
-    position: absolute;
-    top: 80%;
-    width: 100%;
-    height: 15%;
+footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
 }
-.social{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+.register {
+  text-align: center;
+  color: white;
 }
-.socialContainer{
-    display: flex;
-    height: 15vh;
-    align-items: center;
-    justify-content: center;
+.social {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-.socialContainer ul li{
-    display: inline-block;
-    margin: 0 5px;
-    width: 150px;
-    height: 50px;
-    text-align: center;
+.socialContainer {
+  display: flex;
+  height: 15vh;
+  align-items: center;
+  justify-content: center;
 }
-.socialContainer ul li a{
-    display: block;
-    padding: 0 10px;
-    background-color: gray;
-    color: white;
-    line-height: 50px;
-    font-size: 20px;
-    box-shadow: 0 3px 5px 0px rgba(0, 0, 0, .2);
-    transition: .2s;
+.socialContainer ul li {
+  transition: all 0.3s ease;
+  display: inline-block;
+  margin:2px;
+  width: 150px;
+  height: 50px;
+  text-align: center;
 }
-.socialContainer ul:hover a{
-    filter: blur(2px);
+.socialContainer ul li a {
+  display: block;
+  padding: 0 10px;
+  background-color: gray;
+  color: white;
+  line-height: 50px;
+  font-size: 20px;
+  box-shadow: 0 3px 5px 0px rgba(0, 0, 0, 0.2);
+  transition: 0.2s;
+}
+.socialContainer ul:hover a {
+  filter: blur(2px);
 }
 
-.socialContainer ul li a:hover{
-    transform: translateY(-3px) scale(1.05);
-    box-shadow: 0 5px 5px 0px rgba(0, 0, 0, .4);
-    filter: none;
+.socialContainer ul li a:hover {
+  transform: translateY(-3px) scale(1.05);
+  box-shadow: 0 5px 5px 0px rgba(0, 0, 0, 0.4);
+  filter: none;
 }
 
-.socialContainer ul li .facebook:hover{
-    background: rgb(59, 89, 152);
+.socialContainer ul li .facebook:hover {
+  background: rgb(59, 89, 152);
 }
-.socialContainer ul li .instagram:hover{
-    background: rgb(193, 53, 132);
+.socialContainer ul li .instagram:hover {
+  background: rgb(193, 53, 132);
 }
-.socialContainer ul li .twitter:hover{
-    background: rgb(0, 172, 238);
+.socialContainer ul li .twitter:hover {
+  background: rgb(0, 172, 238);
 }
-.socialContainer ul li .github:hover{
-    background: rgb(31, 31, 31);
+.socialContainer ul li .github:hover {
+  background: rgb(31, 31, 31);
 }
-.socialContainer ul li .linkedin:hover{
-    background: rgb(14, 118, 168);
+.socialContainer ul li .linkedin:hover {
+  background: rgb(14, 118, 168);
 }
