--- a/src/app/components/projects/projects.component.css
+++ b/src/app/components/projects/projects.component.css
@@ -1,30 +1,17 @@
-.content {
-  width: 30%;
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: yellow;
-}
 .cards {
   margin-top: 10%;
   max-width: 30%;
   padding: 10px;
-  float: left;
 }
 .paragraph {
   width: 90%;
-  line-height: 100%;
-  height: 50%;
   font-size: 2vw;
-  top: 35%;
   font-family: serif;
 }
-.image{
+.image {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
-  background-attachment: fixed;
   background-attachment: fixed;
 }
 .images {
@@ -37,7 +24,10 @@
 }
 .description {
   overflow: auto;
-  height: 100px; 
+  height: 100px;
+}
+.buttons{
+  margin-left: 5px;
 }
 /* width */
 ::-webkit-scrollbar {
@@ -46,27 +36,41 @@
 
 /* Track */
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey; 
+  box-shadow: inset 0 0 5px grey;
   border-radius: 50px;
 }
- 
+
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: gray; 
+  background: gray;
   border-radius: 50px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: rgb(56, 55, 55); 
+  background: rgb(56, 55, 55);
 }
 
-.control-img{
+.control-img {
   position: relative;
   text-align: center;
   left: 5%;
   width: 100%;
   height: 200px;
   min-width: 120px;
-  min-height:120px;
+  min-height: 120px;
+}
+@media screen and (max-width: 480px) {
+  .cards {
+    max-width: 70%;
+    max-height: 30%;
+  }
+  .control-img {
+    height: 80px;
+  }
+  .buttons {
+    width: 100%;
+    margin-bottom: 5px;
+    margin-left: 0;
+  }
 }
