--- a/src/app/components/contact-me/contact-me.component.css
+++ b/src/app/components/contact-me/contact-me.component.css
@@ -2,27 +2,37 @@
     position: absolute;
     height: 100%;
     width: 100%;
+    top: 20%;
+    left: 33%;
     text-align: center;
+    align-content: center;
 }
 .form{
     text-align: left;
     position: absolute;
-    top: 25%;
-    left: 50%;
     width: 35vw;
+    top: 5%;
 }
 .title{
+    position: absolute;
     text-align: center;
-    position: absolute;
-    top: 20%;
-    left: 50%;
-    width: 35vw;
+    left: 11%;
+    font-size: 4vw;
 }
-.redes{
-     text-align: center;
-    position: absolute;
-    top: 80%;
-    left: 50%;
-    width: 35vw;
-    background-color: black;
+
+
+@media screen  and (max-width: 480px) {
+    .form{
+        width: 90%;
+    }
+    .contenedor{
+        left: 0;
+    }
+    .title{
+        font-size: 8vw;
+        left: 30%;
+    }
+    .contenedor{
+        top: 3%;
+    }
 }
