--- a/src/app/components/contact-me/contact-me.component.html
+++ b/src/app/components/contact-me/contact-me.component.html
@@ -1,4 +1,4 @@
-<div class="container contenedor" style="align-items: center">
+<div class="contenedor">
   <p class="title">Contact me</p>
   <div class="form">
     <div class="mb-3">
