--- a/src/app/components/about-me/about-me.component.html
+++ b/src/app/components/about-me/about-me.component.html
@@ -1,4 +1,4 @@
-<section class="container">
+<section class="contenedor">
   <div class="row">
     <div class="col">
       <div class="paragraph">
