--- a/src/app/components/projects/projects.component.css
+++ b/src/app/components/projects/projects.component.css
@@ -2,11 +2,17 @@
   margin-top: 10%;
   max-width: 30%;
   padding: 10px;
+  opacity: 0.7;
 }
 .paragraph {
   width: 90%;
   font-size: 2vw;
   font-family: serif;
+  font-weight: 500;
+}
+.gallery{
+  background-image: url("../../../assets/images/projects.jpg");
+  height: 100%;
 }
 .image {
   background-size: cover;
