--- a/src/app/components/who-am-i/who-am-i.component.css
+++ b/src/app/components/who-am-i/who-am-i.component.css
@@ -3,7 +3,8 @@
   align-items: center;
   position: absolute;
   top: 30%;
-  left: 50%;
+  left: 30%;
+  color: white;
   transform: translate(-50%,-30%);
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   font-size: 8vw;
@@ -12,11 +13,13 @@
   width: 100%;
   height: 100%;
   position: absolute;
+  background-image: url("../../../assets/images/i-am.jpg");
 }
 .who2 {
   position: absolute;
   top: 60%;
-  left: 50%;
+  left: 30%;
+  color: white;
   transform: translate(-50%, -20%);
   font-family: serif;
   font-size: 3vw;
