--- a/src/app/components/about-me/about-me.component.html
+++ b/src/app/components/about-me/about-me.component.html
@@ -1,8 +1,8 @@
-<section class="contenedor">
+<div class="contenedor">
   <div class="row">
     <div class="col">
       <div class="paragraph">
-      <p class="display-1 title">about me</p>
+      <p class="display-1 title">ABOUT ME</p>
         <b
           style="
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
@@ -69,4 +69,4 @@
       </div>
     </div>
   </div>
-</section>
+</div>
