--- a/src/app/components/full-page/full-page.component.html
+++ b/src/app/components/full-page/full-page.component.html
@@ -1,15 +1,15 @@
-<div class="wallpaper">
+<div>
   <div fullpage id="fullpage" [options]="config" (ref)="getRef($event)">
-    <div class="section" >
+    <div class="section" id="section0" >
       <app-who-am-i></app-who-am-i>
     </div>
-    <div class="section">
+    <div class="section" id="section1">
       <app-about-me></app-about-me>
     </div>
-    <div class="section">
+    <div class="section" id="section2">
       <app-projects></app-projects>
     </div>
-    <div class="section">
+    <div class="section" id="section3">
       <app-contact-me></app-contact-me>
     </div>
   </div>
