--- a/src/app/components/full-page/full-page.component.css
+++ b/src/app/components/full-page/full-page.component.css
@@ -1,9 +1,26 @@
-@import '~fullpage.js/dist/fullpage.min.css';
-.wallpaper {
-   background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-attachment: fixed;
-  background-attachment: fixed;
-  background-image: url("../../../assets/images/wallpaper.jpg");
+@import "~fullpage.js/dist/fullpage.min.css";
+/* Backgrounds will cover all the section
+* --------------------------------------- */
+#section0,
+#section1,
+#section2,
+#section3 {
+  background-size: cover;
+}
+
+#section0 {
+  background-image: url("../../../assets/images/i-am.jpg");
+  background-position: center;
+}
+#section1 {
+  background-image: url("../../../assets/images/projects.jpg");
+  background-position: center ;
+}
+#section2 {
+  background-image: url("../../../assets/images/about-me.jpg");
+  background-position: center;
+}
+#section3 {
+  background-image: url("../../../assets/images/contact-me.jpg");
+  background-position: center;
 }
