--- a/src/app/components/projects/projects.component.css
+++ b/src/app/components/projects/projects.component.css
@@ -2,7 +2,7 @@
   margin-top: 10%;
   max-width: 30%;
   padding: 10px;
-  opacity: 0.7;
+  opacity: 0.9;
 }
 .paragraph {
   width: 90%;
@@ -10,9 +10,12 @@
   font-family: serif;
   font-weight: 500;
 }
-.gallery{
-  background-image: url("../../../assets/images/projects.jpg");
-  height: 100%;
+.gallery {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+  background-image: url("../../../assets/images/about-me.jpg");
 }
 .image {
   background-size: cover;
@@ -26,13 +29,12 @@
   margin: auto;
   width: 100%;
   height: 100%;
-  opacity: 1;
 }
 .description {
   overflow: auto;
   height: 100px;
 }
-.buttons{
+.buttons {
   margin-left: 5px;
 }
 /* width */
